[workspace]
resolver = "2"
members = [
    "packages/*",
    "apps/*",
]

# bridge-fetcher is in packages/* via glob

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PHPCraftdream/tor-socks5"
homepage = "https://github.com/PHPCraftdream/tor-socks5"
readme = "README.md"
authors = ["PHPCraftdream <noreply@users.noreply.github.com>"]
keywords = ["tor", "socks5", "proxy", "bridges", "anonymity"]
categories = ["network-programming", "command-line-utilities"]
rust-version = "1.75"

[workspace.dependencies]
arti-client = { version = "0.42", default-features = false, features = ["tokio", "rustls", "onion-service-client", "static-sqlite", "bridge-client", "pt-client"] }
tor-rtcompat = { version = "0.42", default-features = false, features = ["tokio", "rustls"] }

rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

ktav = "0.6.0"
serde = { version = "1", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }

argon2 = { version = "0.5", default-features = false, features = ["alloc", "password-hash"] }
sha2 = "0.10"
hmac = "0.12"
subtle = "2.6"
dashmap = "6"
rpassword = "7"
clap = { version = "4.5", features = ["derive"] }
service-manager = "0.11"

anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12"] }
webpki-roots = "0.26"
httparse = "1"
base64 = "0.22"
getrandom = "0.2"
url = "2"
bridge-line = { version = "0.4", package = "ptrs-gesher-bridge-line" }
lyrebird = { version = "0.4", package = "ptrs-gesher-lyrebird" }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
proptest = "1"

[profile.release]
lto = "thin"
codegen-units = 1
