[workspace]
resolver = "2"
members = [
    "packages/*",
    "apps/*",
    "vendor/saturating-time",
]

# bridge-fetcher is in packages/* via glob

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PHPCraftdream/tor-socks5"
homepage = "https://github.com/PHPCraftdream/tor-socks5"
readme = "README.md"
authors = ["PHPCraftdream <noreply@users.noreply.github.com>"]
keywords = ["tor", "socks5", "proxy", "bridges", "anonymity"]
categories = ["network-programming", "command-line-utilities"]
rust-version = "1.89"

[workspace.dependencies]
arti-client = { version = "0.43", default-features = false, features = ["tokio", "rustls", "onion-service-client", "static-sqlite", "bridge-client", "pt-client"] }
tor-rtcompat = { version = "0.43", default-features = false, features = ["tokio", "rustls"] }

rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

ktav = "0.6.0"
serde = { version = "1", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }

argon2 = { version = "0.5", default-features = false, features = ["alloc", "password-hash"] }
sha2 = "0.10"
hmac = "0.12"
subtle = "2.6"
dashmap = "6"
rpassword = "7"
clap = { version = "4.5", features = ["derive"] }
service-manager = "0.11"

anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12"] }
webpki-roots = "0.26"
httparse = "1"
base64 = "0.22"
getrandom = "0.2"
url = "2"
bridge-line = { version = "0.5", package = "ptrs-gesher-bridge-line" }
lyrebird = { version = "0.5", package = "ptrs-gesher-lyrebird" }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
proptest = "1"

[profile.release]
lto = "thin"
codegen-units = 1

## TEMPORARY: ptrs-gesher 0.5.0 is not yet on crates.io. Patch the five
## ptrs-gesher crates at the local sibling checkout so the workspace
## builds today. Remove this block before publishing tor-socks5 (after
## ptrs-gesher 0.5.0 is on crates.io).
[patch.crates-io]
## Vendored, locally-fixed forks of three upstream crates. We keep the full
## source in `vendor/` (see vendor/README.md) and override the crates.io
## versions here, so the build is self-contained and does NOT depend on these
## fixes being accepted upstream. Same-version overrides of the exact crates.io
## releases we depend on — bump alongside any arti upgrade.
##
## tor-dirclient 0.43.0: idle (not total) read timeout for slow obfs4 bridges.
tor-dirclient = { path = "vendor/tor-dirclient" }
## tor-dirmgr 0.43.0: hard timeout on the bridge-descriptor fetch (it used to
## hang forever) + patient, gentle retry/parallelism for the bridge pool.
tor-dirmgr = { path = "vendor/tor-dirmgr" }
## FIX: saturating-time 0.3.0 `saturating_add`/`saturating_sub` eagerly force a
## non-terminating min/max search on Windows SystemTime — the root cause of an
## infinite loop in `tor_netdoc::RouterDesc::parse` (used only for bridge
## descriptors), which left every bridge "unsuitable to purpose" so no circuit
## could be built. Vendored with a lazy unwrap + a find_limit termination guard.
saturating-time = { path = "vendor/saturating-time" }
ptrs-gesher-bridge-line = { path = "../ptrs-gesher/crates/bridge-line" }
ptrs-gesher-lyrebird    = { path = "../ptrs-gesher/crates/lyrebird" }
ptrs-gesher-core        = { path = "../ptrs-gesher/crates/core" }
ptrs-gesher-obfs4       = { path = "../ptrs-gesher/crates/obfs4" }
ptrs-gesher-webtunnel   = { path = "../ptrs-gesher/crates/webtunnel" }
